--- a/src/global.css
+++ b/src/global.css
@@ -1,3 +1,3 @@
-@custom-media --sm (600px <= width);
-@custom-media --md (800px <= width);
-@custom-media --lg (1000px <= width);
+@custom-media --sm (width <= 48em);
+@custom-media --md (width <= 62em);
+@custom-media --lg (width <= 75em);
