[change]スマホ向けにヘッダーのpaddingを調整

--- a/src/layouts/Header/styles.module.css
+++ b/src/layouts/Header/styles.module.css
@@ -13,3 +13,9 @@
   font-weight: 700;
   color: var(--mantine-color-brand-blue-7);
 }
+
+@media (--sm) {
+  .header {
+    padding: 1rem 2rem;
+  }
+}
