--- a/src/components/SideBarItem/styles.module.css
+++ b/src/components/SideBarItem/styles.module.css
@@ -1,14 +1,19 @@
 .item {
-  padding: 10px 15px;
+  padding: 13px 20px;
   font-size: 0.9rem;
   width: 90%;
   margin: 0 auto;
   text-decoration: none;
-  color: #030712;
+  color: #475569;
+  font-weight: 700;
+  border-radius: 10px;
+}
+
+.item:hover {
+  background-color: #f3f4f6;
 }
 
 /* TODO: うまくいっていないので直す */
-.item.active {
+.item:global(.active) {
   background-color: #f3f4f6;
-  border-radius: 10px;
 }
