--- a/src/layouts/Header/styles.module.css
+++ b/src/layouts/Header/styles.module.css
@@ -1,7 +1,9 @@
 .header {
+  grid-column: 1 / -1;
   padding: 1rem 4rem;
   background-color: #ffffff;
-  box-shadow: 0 0 2px #e0e0e0;
+  border: 1px solid #e5e7eb;
+  border-width: 0 0 1px;
 }
 
 .header * {
