--- a/src/global.css
+++ b/src/global.css
@@ -1,6 +1,8 @@
 @custom-media --sm (width <= 48em);
 @custom-media --md (48em < width <= 62em);
+@custom-media --md-to-sm (width <= 62em);
 @custom-media --lg (62em < width <= 75em);
+@custom-media --lg-to-sm (width <= 75em);
 @custom-media --xl (75em < width);
 
 .app-layout {
@@ -8,4 +10,11 @@
   grid-template-columns: 1.25fr 6fr;
   grid-template-rows: auto 1fr;
   min-height: 100vh;
+}
+
+@media (--md-to-sm) {
+  .app-layout {
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto 1fr;
+  }
 }
