--- a/src/global.css
+++ b/src/global.css
@@ -12,6 +12,16 @@
   min-height: 100vh;
 }
 
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+a {
+  text-decoration: none;
+}
+
 @media (--md-to-sm) {
   .app-layout {
     grid-template-columns: 1fr;
