--- a/src/components/SideBarItem/styles.module.css
+++ b/src/components/SideBarItem/styles.module.css
@@ -1,11 +1,11 @@
 .item {
-  padding: 13px 20px;
-  font-size: 0.9rem;
-  width: 90%;
-  margin: 0 auto;
-  text-decoration: none;
-  color: #475569;
   border-radius: 10px;
+  color: #475569;
+  display: block;
+  font-size: 0.9rem;
+  margin: 13px auto;
+  padding: 13px 20px;
+  width: 90%;
 }
 
 .item:hover {
