[change]レイアウト指定の微修正

--- a/src/global.css
+++ b/src/global.css
@@ -25,6 +25,6 @@ a {
 @media (--md-to-sm) {
   .app-layout {
     grid-template-columns: 1fr;
-    grid-template-rows: auto auto 1fr;
+    grid-template-rows: auto 1fr;
   }
 }
