[change]他の項目と合うようにログアウトのスタイルを修正

--- a/src/components/BurgerMenu/styles.module.css
+++ b/src/components/BurgerMenu/styles.module.css
@@ -1,7 +1,13 @@
 .logout {
+  border-radius: 10px;
   color: #f44336;
+  display: block;
   font-size: 0.9rem;
   margin: 13px auto;
   padding: 13px 20px;
   width: 90%;
+}
+
+.logout:hover {
+  background-color: #f3f4f6;
 }
