--- a/src/layouts/Header/styles.module.css
+++ b/src/layouts/Header/styles.module.css
@@ -16,7 +16,7 @@
   color: var(--mantine-color-brand-blue-7);
 }
 
-@media (--md) {
+@media (--md-to-sm) {
   .header {
     padding: 1rem 2rem;
   }
